Fix font-size so text in input container isn't cut off

--- a/module-3/css/demoWebWorker.css
+++ b/module-3/css/demoWebWorker.css
@@ -1,7 +1,7 @@
 body, .btn, .form-control {
-  font-size: 18px;
+  font-size: 16px;
   font-family: Verdana;
-  margin-top: .5em;
+  margin: .5em;
 }
 
 div {
